[package]
name = "clone"
version = "0.1.0"
authors = ["Thomas Heilbronner <thomas.heilbronner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
dirs = "3.0.2"
url = "2.2.2"
substring = "1.4.5"
